--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -16,10 +16,10 @@ services:
   matomo_{{ i }}:
     image: matomo:fpm
     restart: unless-stopped
-    links:
+    depends_on:
       - mariadb
     volumes:
-      - matomo:/var/www/html
+      - matomo:/var/www/html:z
 {% for plugin in MATOMO_PLUGINS.files %}
       - {{ service_src_folder }}/plugins/{{ plugin.path.split('/')[-1] }}:/var/www/html/plugins/{{ plugin.path.split('/')[-1] }}
 {% endfor %}
@@ -29,11 +29,13 @@ services:
     image: nginx:alpine
     restart: unless-stopped
     volumes:
-      - matomo:/var/www/html
+      - matomo:/var/www/html:z,ro
       # see https://github.com/matomo-org/matomo-nginx
-      - ./nginx-conf/matomo.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx-conf/matomo.conf:/etc/nginx/conf.d/default.conf:z,ro
+      - ./logs:/var/log/nginx
     ports:
       - 8080:80
+
   matomo-fpm-cron:
     image: matomo:fpm-alpine
     restart: unless-stopped
@@ -42,11 +44,6 @@ services:
     {% for i in range(matomo_container_instances) %}
       - matomo_{{ i }}
     {% endfor -%}
-    links:
-    {% for i in range(matomo_container_instances) %}
-      - matomo_{{ i }}
-    {% endfor %}
-      - mariadb
     volumes:
       - matomo:/var/www/html
 volumes:
