refactor usage of environment vars

--- a/templates/db.env.j2
+++ b/templates/db.env.j2
@@ -3,14 +3,7 @@ MARIADB_INITDB_SKIP_TZINFO=1
 MARIADB_AUTO_UPGRADE=1
 MARIADB_DISABLE_UPGRADE_BACKUP=1
 
-MARIADB_ROOT_PASSWORD={{ MARIADB_ROOT_PASSWORD }}
+MARIADB_ROOT_PASSWORD={{ secrets.MARIADB_ROOT_PASSWORD }}
 MARIADB_DATABASE=matomo
 MARIADB_USER=matomo
-MARIADB_PASSWORD={{ MARIADB_MATOMO_PASSWORD }}
-
-MATOMO_DATABASE_HOST="mariadb"
-MATOMO_DATABASE_ADAPTER="mysql"
-MATOMO_DATABASE_TABLES_PREFIX="matomo_"
-MATOMO_DATABASE_DBNAME="matomo"
-MATOMO_DATABASE_USERNAME="matomo"
-MATOMO_DATABASE_PASSWORD={{ MARIADB_MATOMO_PASSWORD }}
+MARIADB_PASSWORD={{ secrets.MARIADB_MATOMO_PASSWORD }}
